Updated invisible nav issue

--- a/styles/main.css
+++ b/styles/main.css
@@ -85,9 +85,9 @@ header .header .links button span {
 .navbar {
     position:fixed;
     top:0;
-    left:-280px;
+    left:-100%;
     width:100%;
-    height:100%;
+    height:100vh;
     background: var(--dark-blue-color);
     border: 2px solid var(--two-color);
     box-shadow: 0 0 10px 5px rgba(0,0,0,.25);
